docs: capitalise Shuttle; change 'alpha' to 'beta' where required

--- a/examples/actix.mdx
+++ b/examples/actix.mdx
@@ -381,7 +381,7 @@ async fn get_api_status(client: &reqwest::Client) -> bool {
     <h1>WebSocket example</h1>
 
     <p>
-      When you connect you will be notified of the shuttle API status and the
+      When you connect you will be notified of the Shuttle API status and the
       amount of connected users every 15 seconds.
     </p>
     <p>
