--- a/introduction/how-shuttle-works.mdx
+++ b/introduction/how-shuttle-works.mdx
@@ -94,7 +94,7 @@ CPU usage per project is currently limited to four threads. However, because of 
 
 In terms of database resources, the only restriction we have is that an RDS database has a max storage of `10GB`.
 
-Other than that any reasonable usage is acceptable during our alpha, but we will intervene when we detect applications that use excessively large amounts of storage (after attempting to contact the owner).
+Other than that any reasonable usage is acceptable during our beta, but we will intervene when we detect applications that use excessively large amounts of storage (after attempting to contact the owner).
 
 ---
 
