--- a/introduction/idle-projects.mdx
+++ b/introduction/idle-projects.mdx
@@ -3,7 +3,7 @@ title: "Idle Projects"
 ---
 
 Shuttle imposes no restrictions on how many projects a user can 
-create. While we are in alpha this is a win-win, users creating many and
+create. While we are in beta this is a win-win, users creating many and
 varied projects is great for testing both our code and how we handle 
 load. However, this leads to a sizable amount of idle projects. To 
 remedy this, we put these idle projects to sleep, by default after **30 minutes** 
