--- a/introduction/telemetry.mdx
+++ b/introduction/telemetry.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Telemetry"
-description: "Using `tracing` or `log` with shuttle apps."
+description: "Using `tracing` or `log` with Shuttle apps."
 ---
 
 ## Tracing
