--- a/shuttle-next/overview.mdx
+++ b/shuttle-next/overview.mdx
@@ -2,7 +2,7 @@
 title: "Overview"
 ---
 
-Shuttle-next is a brand new WASM web-framework based on axum and hyper. There are many benefits to
+Shuttle-next is a brand new WASM web-framework based on Axum and Hyper. There are many benefits to
 using WASM for a backend web-framework, but one of the key features is the isolation it offers. Since
 WASM modules have no notion of a file system, a shuttle-next project can only interact with the host
 through resources explicitly declared by us. In this first iteration, the only resource available is
