--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -28,7 +28,7 @@ This section is aimed at collecting common questions users have to provide docum
   <Accordion title="How does this differ from using serverless framework with Rust Lambda and provided runtime?">
     You can bring your lambda code to Shuttle as is. And we run it on dedicated infrastructure that keeps the state of your services across requests, has no cold-start and can even have long-running threads, all of which is not possible on AWS Lambda.
   </Accordion>
-  <Accordion title="Can I implement my own custom service for shuttle?">
+  <Accordion title="Can I implement my own custom service for Shuttle?">
     Absolutely! And it's quite easy. Check out this section of our docs for the steps to do so: [Custom Services](https://docs.shuttle.rs/tutorials/custom-service)
   </Accordion>
   <Accordion title="Can I use SeaORM with Shuttle?">
