--- a/support/troubleshooting.mdx
+++ b/support/troubleshooting.mdx
@@ -10,7 +10,7 @@ This section is aimed at collecting common issues users have to provide quick de
     we recommend you upgrade to the latest version of `cargo-shuttle` and other Shuttle crates.
   </Accordion>
   <Accordion title="I've updated Shuttle and my project isn't working anymore.">
-    If you've recently updated shuttle, in order to get your project back up, you need to run:
+    If you've recently updated Shuttle, in order to get your project back up, you need to run:
     `cargo shuttle project restart` and everything should be back in working order.
   </Accordion>
   <Accordion title="I'm struggling to install Shuttle on my M1/M2 Mac, what should I do?">
