--- a/tutorials/custom-service.mdx
+++ b/tutorials/custom-service.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Custom Service"
-description: "This example will explain how to create a custom shuttle service using Poise and Axum."
+description: "This example will explain how to create a custom Shuttle service using Poise and Axum."
 ---
 
 In this simple example we will implement `Service` for a custom service that serves a Discord bot alongside a web server created using Axum.
