chore: fix Actix Web typos

--- a/examples/actix.mdx
+++ b/examples/actix.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Actix"
+title: "Actix Web"
 description:
   "Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust."
 ---
 
-This section revolves around simple Actix examples you can get quickly started with by following these 3 steps:
-1. Initialize a new Actix project by running the `cargo shuttle init --template actix` command
+This section revolves around simple Actix Web examples you can get quickly started with by following these 3 steps:
+1. Initialize a new Actix Web project by running the `cargo shuttle init --template actix` command
 2. Copy pasting the contents of the example you want to deploy -- make sure to check the tabs of the snippet(s) to ensure you are copying the right code/file
 3. Running the `cargo shuttle deploy` command
 
@@ -325,7 +325,7 @@ async fn get_api_status(client: &reqwest::Client) -> bool {
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>WS with Actix</title>
+    <title>WS with Actix Web</title>
 
     <style>
       :root {
