--- a/introduction/what-is-shuttle.mdx
+++ b/introduction/what-is-shuttle.mdx
@@ -25,7 +25,7 @@ You can hit the ground running and swiftly transform your ideas into tangible so
 
 ## Supported Frameworks
 
-Currently we support most of the popular Rust web frameworks: [Axum](../examples/axum), [Actix](../examples/actix), [Rocket](../examples/other), [Warp](../examples/other), [Tower](../examples/other), [Salvo](../examples/other), [Poem](../examples/other), [Tide](../examples/other),
+Currently we support most of the popular Rust web frameworks: [Axum](../examples/axum), [Actix Web](../examples/actix), [Rocket](../examples/other), [Warp](../examples/other), [Tower](../examples/other), [Salvo](../examples/other), [Poem](../examples/other), [Tide](../examples/other),
   
 And also some of the Discord Bot building frameworks: [Serenity](../examples/serenity), [Poise](https://github.com/shuttle-hq/examples/tree/main/poise/hello-world)
 
