Add local run tips and tricks

--- a/introduction/installation.mdx
+++ b/introduction/installation.mdx
@@ -27,17 +27,18 @@ Although a bit slower, you can also install directly with cargo:
 cargo install cargo-shuttle
 ```
 
-<Note>If you are using an M1/M2 Mac, `cargo install cargo-shuttle` might not work for you due to an issue with the `cargo generate` upstream dependency. In those cases, it is advised to install Shuttle with `binstall`.</Note>
+<Note>If you are using an M1/M2 Mac, `cargo install cargo-shuttle` might not work for you due to an issue with the `cargo-generate` upstream dependency. In those cases, it is advised to install Shuttle with `binstall`.</Note>
 
 ### Arch Linux
 
-`cargo-shuttle` can be installed from the [community repository](https://archlinux.org/packages/community/x86_64/cargo-shuttle) using [pacman](https://wiki.archlinux.org/title/Pacman):
+`cargo-shuttle` can be installed from the [community repository](https://archlinux.org/packages/extra/x86_64/cargo-shuttle/) using [pacman](https://wiki.archlinux.org/title/Pacman):
 
 ```sh
 pacman -S cargo-shuttle
 ```
 
 > This is a community package maintained by [orhun](https://github.com/orhun).
+
 ## Login
 
 After installing, log in with:
