docs: Fix various minor typos

--- a/configuration/shuttle-service-name.mdx
+++ b/configuration/shuttle-service-name.mdx
@@ -27,7 +27,7 @@ If the `--name` option with a command is not used, the next method to name a pro
 name = <your-project-name>
 ```
 
-Where `<your-project-name>` is whatever you wish to name the project.  This method of naming supercedes any name set in `Cargo.toml`.
+Where `<your-project-name>` is whatever you wish to name the project.  This method of naming supersedes any name set in `Cargo.toml`.
 
 ## via Cargo.toml
 
