--- a/resources/overview.mdx
+++ b/resources/overview.mdx
@@ -27,7 +27,7 @@ The Shared Databases plugin will spin up a shared Postgres or MongoDB database i
 
 ### Secrets
 
-The Shuttle Secrets plugin provides a place to store environment variables which are sensitve and cannot be committed into version control.
+The Shuttle Secrets plugin provides a place to store environment variables which are sensitive and cannot be committed into version control.
 
 ### Static Folder
 
