--- a/examples/rocket.mdx
+++ b/examples/rocket.mdx
@@ -569,7 +569,7 @@ use rocket::{
 use serde::{Deserialize, Serialize};
 
 // TODO: this has an extra trailing space to cause the test to fail
-// This is to demonstate shuttle will not deploy when a test fails.
+// This is to demonstrate shuttle will not deploy when a test fails.
 // FIX: remove the extra space character and try deploying again
 const BEARER: &str = "Bearer  ";
 const AUTHORIZATION: &str = "Authorization";
