--- a/introduction/quick-start.mdx
+++ b/introduction/quick-start.mdx
@@ -30,7 +30,7 @@ And to deploy it:
 cargo shuttle deploy
 ```
 
-<Info> In case you haven't commited the changes to your repo, you'll have to add a `--allow-dirty` flag. </Info>
+<Info> In case you haven't committed the changes to your repo, you'll have to add a `--allow-dirty` flag. </Info>
 
 You can also run your project locally for development, check out our [local run](./local-run) section.
 
