--- a/tutorials/rest-http-service-with-axum.mdx
+++ b/tutorials/rest-http-service-with-axum.mdx
@@ -9,7 +9,7 @@ In this guide you'll learn the basics of how to write a competent Axum HTTP REST
 To get started, you'll want to initialise a Shuttle project with Axum (you can find more about getting started [here](https://docs.shuttle.rs/introduction/installation)).
 
 ```rust
-cargo shuttle init --axum
+cargo shuttle init --template axum
 ```
 
 This will initialise a project with a basic router and basic configuration so that it can be deployed immediately.
