--- a/tutorials/websocket-chat-app-js.mdx
+++ b/tutorials/websocket-chat-app-js.mdx
@@ -537,7 +537,7 @@ const websocket = new WebSocket(wsUri);
 
 Now that we've changed the connection URL, our compiled assets in our Rust folder will work on the local Rust run without us having to use our local Vite deployment! However, if we try to run our front end by itself, it won't connect as this connection string relies on using the local Rust project - but you can change the connection string as required.
 
-Now we can update our main function and router together so that the router will use tower_http's ServeDir function for serving static files:
+Now we can update our main function and router together so that the router will use `tower_http`'s `ServeDir` function for serving static files:
 
 ```rust
 #[shuttle_runtime::main]
