chore: make correction to load method per review

--- a/resources/shuttle-persist.mdx
+++ b/resources/shuttle-persist.mdx
@@ -10,7 +10,7 @@ To use the persist plugin, add `shuttle-persist` to the dependencies of your ser
 
 - `clear()`: removes the keys within the `PersistInstance`
 - `list()`: returns a vector of strings containing all the keys associated with a `PersistInstance`
-- `load()`: loads the contents of the `PersistInstance`
+- `load()`: loads a value from a key stored within the `PersistInstance`
 - `new()`: constructs a new `PersistInstance` along with its associated storage folder
 - `save()`: saves a key-value pair into the `PersistInstance`
 - `remove()`: deletes a key from the `PersistInstance`
