--- a/configuration/project-name.mdx
+++ b/configuration/project-name.mdx
@@ -48,4 +48,4 @@ This will create a new Axum-based project in `some-directory` and update the nam
 ## Workspaces
 
 If your project is a cargo workspace the name will be taken from a `Shuttle.toml` in the root of the workspace, or
-from the directory name of the workspace. See [workspaces](../introduction/workspaces).
+from the directory name of the workspace. See [workspaces](/getting-started/workspaces).
