--- a/migration/migrating-to-shuttle.mdx
+++ b/migration/migrating-to-shuttle.mdx
@@ -6,7 +6,7 @@ description: "Short guide on how to migrate your existing project over to Shuttl
 
 ### Setup
 
-This guide assumes that you have Shuttle already setup. If you don't, head on over to our [installation](../introduction/installation) & [quick start](../introduction/quick-start) guides in order to install Shuttle & create your first project.
+This guide assumes that you have Shuttle already setup. If you don't, head on over to our [installation](/getting-started/installation) & [quick start](/getting-started/quick-start) guides in order to install Shuttle & create your first project.
 
 For this example, we'll assume you are migrating your Axum project. Once you've created your project, you'll want to add `shuttle_runtime` and `shuttle_axum` to your dependencies to be able to use shuttle's runtime with the Axum framework. You can run the following command below like so to do this:
 
