check release page

--- a/configuration/shuttle-versions.mdx
+++ b/configuration/shuttle-versions.mdx
@@ -9,7 +9,9 @@ description: "How Shuttle versions work"
 
 ## Upgrading Shuttle version
 
-Combining all of the above, these are the recommended steps for upgrading a Shuttle app:
+Combining all of the above, these are the recommended steps for upgrading a Shuttle app.
+
+<Info>Note: Please check the [release page](https://github.com/shuttle-hq/shuttle/releases) for any considerations regarding breaking changes in the new release.</Info>
 
 1. Upgrade your `cargo-shuttle` CLI with `cargo install cargo-shuttle`, or if you're using cargo-binstall, `cargo binstall cargo-shuttle`.
 
