improvement: corrections per review comments

--- a/resources/shuttle-metadata.mdx
+++ b/resources/shuttle-metadata.mdx
@@ -6,7 +6,7 @@ The metadata plugin allows applications to obtain certain information about thei
 
 ## Usage
 
-To use the metadata plugin, add `shuttle-metadata` to the dependencies for your service by manually editing the project's `cargo.toml` file or by invoking `cargo add shuttle-metadata` from the command line.
+To use the metadata plugin, add `shuttle-metadata` to the dependencies for your service by manually editing the project's `Cargo.toml` file or by invoking `cargo add shuttle-metadata` from the command line.
 
 Once the metadata plugin dependency is available to your project, use the resource by annotating your main function with the `shuttle_metadata::ShuttleMetadata` attribute. Doing this enables return of a MetaData struct which will contain information such as the Shuttle service name.
 
@@ -30,7 +30,7 @@ async fn axum(
 
 This example has one route which returns the Shuttle service name in JSON format:
 
-```JSON
+```text
 Metadata { service_name: "metadata-example" }
 ```
 
