--- a/configuration/project-name.mdx
+++ b/configuration/project-name.mdx
@@ -5,7 +5,7 @@ description: "How project names work"
 
 Your Shuttle Project Name determines which subdomain your project is hosted on (`https://<project-name>.shuttleapp.rs/`).
 Therefore, your project name has to be unique.
-You might also want to use a short and easy-to-remember name.
+You might also want to use a name that is short and easy to remember.
 
 ## Specifying Project Name
 
@@ -30,7 +30,7 @@ The next method to specify a project name is by creating a `Shuttle.toml` file a
 In this file, place a key-value pair like so:
 
 ```toml Shuttle.toml
-name = <my-project-name>
+name = "my-project-name"
 ```
 
 ## via Cargo.toml
