--- a/configuration/logs.mdx
+++ b/configuration/logs.mdx
@@ -50,7 +50,7 @@ To view the logs for your current `running` deployment, if there is one:
 cargo shuttle logs
 ```
 
-*Caveat: The above command finds the oldest deployment in the `running` state (there should only be one...).*
+*Caveat: The above command finds the oldest deployment in the `running` state. [related issue](https://github.com/shuttle-hq/shuttle/issues/1067)*
 
 You can also view logs of a specific deployment by adding the deployment id to this command:
 
